Removed Rule 6 from appeal details final comments

--- a/app/views/appeal/appeals/v2/appeal-details.html
+++ b/app/views/appeal/appeals/v2/appeal-details.html
@@ -254,11 +254,11 @@
             </a>
           </p>
 
-          <p class="govuk-body">
+          <!-- <p class="govuk-body">
             <a href="r6-final-comments">
               View final comments from other parties
             </a>
-          </p>
+          </p> -->
 
         {% endif %}
 
