--- a/app/views/index.html
+++ b/app/views/index.html
@@ -154,33 +154,18 @@
           </a>
         </li>
         <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=due&appellant-final-comments=&lpa-final-comments=&r6-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
-            Final-comments due
-          </a>
-        </li>
-        <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&lpa-final-comments=&r6-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
-            Final-comments done
-          </a>
-        </li>
-        <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&lpa-final-comments=complete&appellant-final-comments=complete&r6-final-comments=complete&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
-            All final comments done
-          </a>
-        </li>
-        <li>
           <a href="/interested/rule-6/v1/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=due&lpa-proofs=&appellant-proofs=">
-            Inquiry: Proof of evidence due
+            Proof of evidence due
           </a>
         </li>
         <li>
           <a href="/interested/rule-6/v1/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=complete&lpa-proofs=&appellant-proofs=">
-            Inquiry: Proof of evidence done
+            Proof of evidence done
           </a>
         </li>
         <li>
           <a href="/interested/rule-6/v1/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&appeal-decided=&proofs=complete&lpa-proofs=complete&appellant-proofs=complete">
-            Inquiry: All proof done
+            All proof done
           </a>
         </li>
         <li>
