--- a/app/views/manage/appeals/v8/appeal-details.html
+++ b/app/views/manage/appeals/v8/appeal-details.html
@@ -342,11 +342,11 @@
             </a>
           </p>
 
-          <p class="govuk-body">
+          <!-- <p class="govuk-body">
             <a href="r6-final-comments">
               View final comments from other parties
             </a>
-          </p>
+          </p> -->
 
         {% endif %}
 
