Small fixes for the LPA witness timing changes

--- a/app/views/manage/appeals/v8/appeal-details.html
+++ b/app/views/manage/appeals/v8/appeal-details.html
@@ -37,7 +37,7 @@
     text: 'All final-comments done'
   },
   {
-    href: '?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=&appellant-proofs=&timings=&other-timings=',
+    href: '?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&evidence=&proofs=&appellant-proofs=&timings=&other-timings=&appeal-decided=complete',
     text: 'Appeal decided'
   },
   {
